# upstageailab-ocr-recsys-competition-ocr-2

./: .env.template  .evaluation_viewer_8503.pid  .gitattributes  .gitignore  .gitingestignore  .inference_8504.pid  .pre-commit-config.yaml  .qwenignore  ADVANCED_PREPROCESSING_README.md  CLAUDE.md  Dockerfile  Dockerfile.cpu  Makefile  OFFLINE_SAMPLES_README.md  Pseudo-Labeling with an Open-Source Model.md  QWEN.md  README.md  SETUP.md  UNUSABLE_CHECKPOINTS.md  augmentation-patterns.yaml  checkpoint_catalog_refactor_plan.md  checkpoint_trace_report.md  continuation-prompt-streamlit-ui.md  data-pipeline-testing-plan.md  debug_overlays.py  debug_path.py  demo_advanced_preprocessing.py  demo_brightness_adjustment.py  demo_document_flattening.py  demo_evaluation_viewer.py  demo_ui.py  docker-helper.sh  experiment-analysis-framework-ideas.md  generate_demo_images.py  mkdocs.yml  notepad-copy.md  notepad.md  pesudo_labeling_template.py  project-overview.md  pyproject.toml  (+18 more)
.AGENTS/: README.md
.github/: copilot-instructions.md  copilot_instructions.md
.github/workflows/: ci.yml  docs-validation.yml  performance-regression.yml  scheduled-maintenance.yml  update-diagrams.yml
.qwen/: settings.json
_archive/docs/: architecture-overview.md  copilot-instructions.md
ablation_study/: ablation_workflow.py  collect_results.py  demo_ablation.py  generate_ablation_table.py  run_ablation.py  setup-uv-env.sh
configs/: base.yaml  cache_performance_test.yaml  performance_test.yaml  predict.yaml  test.yaml  train.yaml
configs/ablation/: batch_size.yaml  learning_rate.yaml  model_architecture.yaml
configs/benchmark/: decoder.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  metadata.yaml  model_checkpoint.yaml  performance_profiler.yaml  profiler.yaml  resource_monitor.yaml  throughput_monitor.yaml  wandb_image_logging.yaml
configs/data/: base.yaml  cache.yaml  canonical.yaml  craft.yaml  default.yaml  preprocessing.yaml
configs/dataloaders/: default.yaml
configs/experiment/: synthetic_debug.yaml
configs/hydra/: default.yaml
configs/logger/: default.yaml  wandb.yaml
configs/metrics/: cleval.yaml
configs/model/: default.yaml
configs/paths/: default.yaml
configs/schemas/: default_predict.yaml  default_test.yaml  default_train.yaml  ui_inference_compat.yaml
configs/tools/: README.md  repomix.config.json  seroost_config.json
configs/trainer/: default.yaml
configs/transforms/: base.yaml
configs/ui/: inference.yaml
configs/ui_meta/: preprocessing_profiles.yaml
debug/: README.md
debug/bug_reproduction/: test_albumentations_contract.py  test_collate_bug.py
debug/verification/: test_load_maps_disabled.py  verify_cache_implementation.py
docker/: .bashrc  Dockerfile  MAINTENANCE.md  README.md  docker-compose.yml  docker-helper-root.sh  docker-helper.sh  profile_performance.py  setup-ssh-container.sh  setup-ssh-volume.sh  setup.sh  uvcheck.py
docker/docker_v0.5_DEPRACATED/: profile_performance.py  setup-ssh-container.sh
docs/: CHANGELOG.md  README.md  api-reference.md  component-diagrams.md  index.md  offline-samples.md  preprocessing_guide.md  process-management-guide.md  semantic_search_patterns.md  submission-quick-reference.md  validation-system.md  workflow-diagram.md
docs/_deprecated/: documentation-refactor_plan.md  proposed structure.md
docs/ai_handbook/: 99_current_state.md  QWEN.md  STYLE_GUIDE.md  audit_report.md  index.json  index.md  performance_features_reimplementation_assessment.md  post_debugging_session_framework.md  session_handover_performance_restoration.md
docs/bug_reports/: BUG-2025-004_polygon_shape_dimension_error.md  BUG-2025-010_empty_predictions_resolution_plan.md  BUG_REPORT_TEMPLATE.md  CRITICAL_ISSUES_RESOLUTION_2025_10_14.md  SESSION_SUMMARY_2025-10-10_CONTINUATION.md
docs/copilot/: context.md  instructions.md
docs/development/: naming-conventions.md
docs/maintenance/: project-state.md
docs/next_job_log/: 2025-10-02.md
docs/performance/: 2025-10-08_convex_hull_debugging.md  BENCHMARK_COMMANDS.md  CACHE_VERIFICATION_GUIDE.md  QUICK_REFERENCE.md  baseline_2025-10-07.md  baseline_2025-10-07_final.md  baseline_2025-10-07_v2.md  baseline_2025-10-08_cache_optimized.md  baseline_2025-10-10_dbnet-resnet18-pan-polygon-e20-hmean-0.95.md  baseline_vs_optimized_comparison.md  baseline_vs_optimized_comparison_corrected.md  benchmark_baseline_report.md  benchmark_optimized_report.md  comparison_data.json  raw_metrics.json  raw_metrics_final.json  raw_metrics_v2.json
docs/pipeline/: data_contracts.md
document-refactor-job/: index.json  refactor_plan_cleanup_handbook.md
handover/: 2025-10-12-session-handover.md
logs/: convex_hull_failures.jsonl
ocr/: synthetic_data.py
phase1_validation_results/: phase1_processing_times.json  phase1_validation_summary.json  phase2_noise_elimination_validation.py
resource_logs/: epoch_0.csv  epoch_1.csv  epoch_2.csv  epoch_3.csv  epoch_4.csv  epoch_5.csv  epoch_6.csv  epoch_7.csv  epoch_8.csv
results/: README.md
runners/: generate_synthetic.py  predict.py  process_pseudo_labels.py  test.py  train.py
scripts/: README.md  benchmark_performance.py  benchmark_validation.py  decoder_benchmark.py  generate_doctr_demo.py  preprocess_maps.py  process_manager.py  process_monitor.py  profile_data_loading.py  test_transform_optimizations.py  validate_links.py
test_resource_logs/: epoch_0.csv
tests/: README.md  conftest.py  test_architecture.py  test_craft_components.py  test_dataset.py  test_lightning_module.py  test_metrics.py  test_ocr_dataset_and_collate.py  test_preprocess_maps.py  test_preprocessing.py  test_profiler_callback.py  test_resource_monitor.py  test_throughput_monitor.py  test_validated_ocr_dataset.py
ui/: README.md  __init__.py  command_builder.py  data_utils.py  evaluation_viewer.py  inference_ui.py  preprocessing_viewer_app.py  resource_monitor.py  test_viewer.py  visualization.py  visualize_annotations.py  visualize_predictions.py
wchoi189_dbnetpp-resnet18-unet-db-head-db-loss-bs8-lr1e-3_hmean0.898/: wandb_export_2025-10-03T20_54_48.624+09_00.csv
(+453 files in other folders)
